<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/playlist_name"
        style="@style/TextViewLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/playlist" />


    <EditText
        android:id="@+id/updateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/update_playlist_name" />

    <TextView
        style="@style/TextViewLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author" />

    <TextView
        android:id="@+id/user"
        style="@style/TextViewNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author" />

    <TextView
        style="@style/TextViewLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language" />

    <TextView
        android:id="@+id/language"
        style="@style/TextViewNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"/>

    <TextView
        style="@style/TextViewLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/private_str" />

    <TextView
        android:id="@+id/is_private"
        style="@style/TextViewNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/private_str"
        />


    <TextView
        style="@style/TextViewLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/songs" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/save"
        android:textSize="20sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/show"
        android:textSize="20sp" />

</LinearLayout>